# business-card-generator

./: README.md  pyproject.toml  requirements.txt  vercel.json
business_card_generator/: __about__.py  app.py  card.py  settings.py  wsgi.py
business_card_generator/templates/: _base.html  card.html  home.html
