[project]
name = "digital-contact-card-creator"
description = "Create professional digital contact cards with QR codes in multiple formats"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Swati Chaudhari", email = "swatidchaudhary17@gmail.com" }
]
dynamic = ["version"]
requires-python = ">=3.8"
dependencies = [
    "flask>=2.0.0",
    "pydantic[email]>=2.0.0",
    "pydantic-settings>=2.0.0",
    "segno>=1.5.0",
    "whitenoise>=6.0.0",
    "gunicorn>=20.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
Repository = "https://github.com/rclement/business-card-generator"
Issues = "https://github.com/rclement/business-card-generator/issues"
Changelog = "https://github.com/rclement/business-card-generator/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "bandit==1.8.3",
    "faker==37.3.0",
    "invoke==2.2.0",
    "mypy==1.16.0",
    "pip-audit==2.9.0",
    "pytest==8.3.5",
    "pytest-cov==6.1.1",
    "python-dotenv==1.1.0",
    "ruff==0.11.12",
]

[tool.hatch.version]
path = "business_card_generator/__about__.py"